k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-backend
  namespace: test-back
  labels:
    app: test-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-backend
  template:
    metadata:
      labels:
        app: test-backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: test-backend
          image: hjh-test-registry.kr.ncr.ntruss.com/back-02:latest #이미지 경로 반드시 변경
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: test-backend-svc
  namespace: test-back
spec:
  selector:
    app: test-backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080  # 직접 지정하거나 생략 시 자동 할당

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-backend-ingress
  namespace: test-back
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "44259"
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-backend-svc
                port:
                  number: 80
